Issue #3388221: Use the Hero Card - UI Pattern, to manage the format of ( pattern for one ) on the single Hero slide , Update the Hero Card component for a better use with Varbase Heroslider

--- a/config/optional/views.view.varbase_heroslider.yml
+++ b/config/optional/views.view.varbase_heroslider.yml
@@ -2,18 +2,13 @@ langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.hero_card
     - entityqueue.entity_queue.varbase_heroslider
-    - field.storage.node.field_brief
-    - field.storage.node.field_link
-    - field.storage.node.field_media_single
     - node.type.varbase_heroslider
   module:
-    - ds
     - entityqueue
-    - link
     - node
     - user
-    - views_bootstrap
 id: varbase_heroslider
 label: 'Varbase Heroslider'
 module: views
@@ -29,262 +24,7 @@ display:
     position: 0
     display_options:
       title: 'Varbase Heroslider'
-      fields:
-        field_media_single:
-          id: field_media_single
-          table: node__field_media_single
-          field: field_media_single
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: field
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: target_id
-          type: entity_reference_entity_view
-          settings:
-            view_mode: varbase_heroslider
-          group_column: target_id
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-        title:
-          id: title
-          table: node_field_data
-          field: title
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: field
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: string
-          settings:
-            link_to_entity: false
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-        field_brief:
-          id: field_brief
-          table: node__field_brief
-          field: field_brief
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: field
-          label: ''
-          exclude: false
-          alter:
-            alter_text: true
-            text: '<div class="slick__text">{{ field_brief }} </div>'
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: basic_string
-          settings: {  }
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-        field_link:
-          id: field_link
-          table: node__field_link
-          field: field_link
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: field
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: uri
-          type: link
-          settings:
-            trim_length: 80
-            url_only: false
-            url_plain: false
-            rel: '0'
-            target: '0'
-          group_column: ''
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
+      fields: {  }
       pager:
         type: some
         options:
@@ -364,40 +104,16 @@ display:
             operator_limit_selection: false
             operator_list: {  }
       style:
-        type: views_bootstrap_carousel
+        type: default
         options:
-          grouping: {  }
-          interval: '5000'
-          keyboard: 1
-          ride: 1
-          navigation: 1
-          indicators: 1
-          pause: 1
-          use_caption: 1
-          wrap: 1
-          effect: slide
-          image: field_media_single
-          title: title
-          description: field_brief
+          row_class: ''
+          default_row_class: false
+          uses_fields: false
       row:
-        type: 'ds_entity:node'
+        type: 'entity:node'
         options:
           relationship: none
-          view_mode: default
-          alternating_fieldset:
-            alternating: false
-            allpages: false
-            item_0: teaser
-            item_1: teaser
-            item_2: teaser
-            item_3: teaser
-            item_4: teaser
-          grouping_fieldset:
-            group: false
-            group_field: node_field_data|entityqueue_relationship
-            group_field_function: ''
-          advanced_fieldset:
-            advanced: false
+          view_mode: hero_card
       query:
         type: views_query
         options:
@@ -425,15 +141,11 @@ display:
     cache_metadata:
       max-age: -1
       contexts:
-        - 'languages:language_content'
         - 'languages:language_interface'
         - 'user.node_grants:view'
         - user.permissions
       tags:
         - 'config:entityqueue.entity_queue.varbase_heroslider'
-        - 'config:field.storage.node.field_brief'
-        - 'config:field.storage.node.field_link'
-        - 'config:field.storage.node.field_media_single'
         - entity_field_info
         - views_data
   varbase_heroslider:
@@ -447,17 +159,14 @@ display:
         metatag_display_extender:
           metatags: {  }
           tokenize: false
+      block_description: 'Varbase Heroslider'
     cache_metadata:
       max-age: -1
       contexts:
-        - 'languages:language_content'
         - 'languages:language_interface'
         - 'user.node_grants:view'
         - user.permissions
       tags:
         - 'config:entityqueue.entity_queue.varbase_heroslider'
-        - 'config:field.storage.node.field_brief'
-        - 'config:field.storage.node.field_link'
-        - 'config:field.storage.node.field_media_single'
         - entity_field_info
         - views_data
