--- a/config/optional/core.entity_view_mode.media.varbase_heroslider.yml
+++ b/config/optional/core.entity_view_mode.media.varbase_heroslider.yml
@@ -4,7 +4,7 @@ dependencies:
   module:
     - media
 id: media.varbase_heroslider
-label: 'Varbase Heroslider'
+label: 'Heroslider'
 description: ''
 targetEntityType: media
 cache: true
