--- a/config/optional/core.entity_view_display.node.varbase_heroslider.default.yml
+++ b/config/optional/core.entity_view_display.node.varbase_heroslider.default.yml
@@ -21,7 +21,9 @@ third_party_settings:
         pattern:
           field_templates: default
           settings:
+            hero_style: overlay
             card_border: 0
+            padded: 0
             horizontal_alignment: start
             vertical_alignment: end
             utility_classes: ''
