Issue #3388221: Change Hero Style property to Media position context in the Hero Slider view

--- a/config/optional/core.entity_view_display.node.varbase_heroslider.default.yml
+++ b/config/optional/core.entity_view_display.node.varbase_heroslider.default.yml
@@ -21,7 +21,7 @@ third_party_settings:
         pattern:
           field_templates: default
           settings:
-            hero_style: overlay
+            media_position: overlay
             card_border: 0
             padded: 0
             horizontal_alignment: start
