--- a/config/optional/views.view.varbase_heroslider.yml
+++ b/config/optional/views.view.varbase_heroslider.yml
@@ -83,7 +83,7 @@ display:
           field: 'null'
           relationship: none
           group_type: group
-          admin_label: 'Hero Style'
+          admin_label: 'Media position'
           plugin_id: 'null'
           default_action: default
           exception:
@@ -91,7 +91,7 @@ display:
             title_enable: false
             title: All
           title_enable: true
-          title: 'Hero Style'
+          title: 'Media position'
           default_argument_type: fixed
           default_argument_options:
             argument: overlay
